<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.project.dbmsse.SignInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">


            <ImageView
                android:layout_width="97dp"
                android:layout_height="131dp"
                android:layout_gravity="center"
                android:layout_marginBottom="32dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/rentone" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorWhite"
                android:hint="@string/hint__email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorSecondaryText" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorWhite"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorSecondaryText" />


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark"
                android:elevation="4dp"
                android:padding="16dp"

                android:text="@string/btn_login"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/forgotten_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:padding="4dp"
                android:text="Forgotten Password"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <TextView
            android:id="@+id/link_to_registration"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/btn_link_to_register"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

</LinearLayout>
