<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/bg"
    tools:context="com.project.dbmsse.ForgottenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/rentone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:textSize="12dp"
            android:text="@string/reset_password"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <EditText
                android:id="@+id/reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="Password"
                android:inputType="text"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorSecondaryText" />

        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/password_reset_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/colorAccent"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="Password Reset"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:textSize="11dp"
            android:textColor="@color/colorWhite"
            android:text="@string/password_reset_message"/>

    </LinearLayout>

</LinearLayout>
