<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.project.dbmsse.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/link_to_login"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorWhite"
                android:hint="User Name"
                android:inputType="textCapWords"
                android:padding="8dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorSecondaryText" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorWhite"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorSecondaryText" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorWhite"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorSecondaryText" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorWhite"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="8dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorSecondaryText" />
            <EditText
                android:id="@+id/locality"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorWhite"
                android:hint="@string/locality"
                android:inputType="textLongMessage"
                android:padding="8dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorSecondaryText" />
            <EditText
                android:id="@+id/city"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorWhite"
                android:hint="@string/city"
                android:inputType="textLongMessage"
                android:padding="8dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorSecondaryText" />
            <EditText
                android:id="@+id/state"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorWhite"
                android:hint="@string/state"
                android:inputType="textLongMessage"
                android:padding="8dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorSecondaryText" />
            <EditText
                android:id="@+id/pincode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorWhite"
                android:hint="pincode"
                android:inputType="textLongMessage"
                android:padding="8dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorSecondaryText" />








            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dip"
                android:background="@color/colorPrimary"
                android:padding="16dp"
                android:text="@string/sign_up"
                android:textColor="@color/colorWhite" />


        </LinearLayout>

        <TextView
            android:id="@+id/link_to_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="Already registered? Login"
            android:textColor="@color/colorWhite" />

        <ImageView
            android:layout_width="149dp"
            android:layout_height="127dp"
            android:layout_gravity="center"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="40dp"
            android:paddingBottom="32dp"
            android:src="@drawable/rentone" />

    </RelativeLayout>

</LinearLayout>

<!--<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.project.dbmsse.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_above="@+id/link_to_login"
            android:layout_marginBottom="24dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorWhite"
                android:hint="User Name"
                android:inputType="textCapWords"
                android:padding="16dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorSecondaryText" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorWhite"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorSecondaryText" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorWhite"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorSecondaryText" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorWhite"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="16dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorSecondaryText" />


            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dip"
                android:background="@color/colorPrimary"
                android:padding="16dp"
                android:text="@string/sign_up"
                android:textColor="@color/colorWhite" />


        </LinearLayout>

        <TextView
            android:id="@+id/link_to_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="Already registered? Login"
            android:textColor="@color/colorWhite" />

        <ImageView
            android:layout_width="149dp"
            android:layout_height="127dp"
            android:layout_gravity="center"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="40dp"
            android:paddingBottom="32dp"
            android:src="@drawable/rentone" />

    </RelativeLayout>

</LinearLayout>
-->