<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.project.dbmsse.DestinationActivity">

    <LinearLayout
        android:id="@+id/toolbar_header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="6"
            android:gravity="center"
            android:padding="10dp"
            android:text="Choose Destination"
            android:textColor="@color/colorWhite"
            android:textSize="13dp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.project.dbmsse.DestinationActivity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            android:padding="4dp">

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/pick_up_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="3dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/green" />

                        <TextView
                            android:id="@+id/starting_location"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="6"
                            android:padding="12dp"
                            android:text="@string/_12_new_crescent_road"
                            android:textColor="@color/colorSecondaryText"
                            android:textSize="12dp" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="42dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/colorBorder"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/red" />

                        <AutoCompleteTextView
                            android:id="@+id/destination_location"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="6"
                            android:textSize="14sp"
                            android:inputType="textAutoComplete"
                            android:textColor="@color/colorSecondaryText"
                            android:paddingLeft="16dp"
                            android:paddingStart="16dp"
                            android:paddingRight="8dp"
                            android:paddingEnd="8dp"
                            android:background="@android:color/transparent"
                            android:hint="@string/my_destination"/>

                        <ImageView
                            android:id="@+id/delete_destination"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/delete"
                            android:layout_gravity="center"
                            android:layout_weight="1"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="4dp"
            android:orientation="vertical"
            android:padding="4dp">

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/distance_travel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="11dp"
                            android:text="@string/distance_by_kilometers"
                            android:textColor="@color/colorBlack"
                            android:textSize="12dp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/get_cost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccent"
                        android:padding="12dp"
                        android:text="@string/price_estimation"
                        android:textSize="10dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </FrameLayout>

</RelativeLayout>





